# fastapi-filterstyles

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: lint.yml
fastapi_filterstyles/: __init__.py  api.py  fields.py
