[tool.poetry]
name = "fastapi-filterstyles"
version = "0.1.0"
description = ""
authors = ["Sean Sabbage <sgsabbage@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "fastapi_filterstyles"}]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
pydantic = ">=1.9.1"
fastapi = ">=0.93.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
ruff = "^0.0.270"
mypy = "^1.3.0"
tomli = "^2.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
